<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2020-2026 Martin Denham, Sykerö Software / Tuomas Airaksinen and the AndBible contributors.
  ~
  ~ This file is part of AndBible: Bible Study (http://github.com/AndBible/and-bible).
  ~
  ~ AndBible is free software: you can redistribute it and/or modify it under the
  ~ terms of the GNU General Public License as published by the Free Software Foundation,
  ~ either version 3 of the License, or (at your option) any later version.
  ~
  ~ AndBible is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;
  ~ without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
  ~ See the GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License along with AndBible.
  ~ If not, see http://www.gnu.org/licenses/.
  -->

<!-- Icons are dynamically set in app/src/main/java/net/bible/android/view/activity/page/OptionsMenuItems.kt -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:key="parent_settings_category"
        android:title="@string/parent_settings_category_title"
        >
        <Preference
            android:key="open_workspace_settings"
            android:title="@string/workspace_text_options_link"
            android:summary="@string/workspace_text_options_link_summary"
            />
        <Preference
            android:key="open_global_settings"
            android:title="@string/global_text_options_link"
            android:summary="@string/global_text_options_link_summary"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_font_and_colors_title"
        >
        <Preference
            android:key="COLORS"
            android:title="@string/prefs_text_colors_menutitle"
            android:summary="@string/prefs_text_colors_summary"
            />
        <Preference
            android:key="FONTSIZE"
            android:title="@string/font_size_title"
            android:summary="@string/prefs_font_text_size_summary"
            />
        <Preference
            android:key="FONTFAMILY"
            android:title="@string/pref_font_family_label"
            android:summary="@string/prefs_font_family_summary"
            />
        <Preference
            android:key="LINE_SPACING"
            android:title="@string/line_spacing_title"
            android:summary="@string/line_spacing_summary"
            />
        <SwitchPreferenceCompat
            android:key="REDLETTERS"
            android:title="@string/prefs_red_letter_title"
            android:summary="@string/prefs_red_letter_summary"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_text_layout_title"
        >
        <Preference
            android:key="MARGINSIZE"
            android:title="@string/prefs_margin_size_title"
            android:summary="@string/prefs_margin_size_summary"
            />
        <Preference
            android:key="TOPMARGIN"
            android:title="@string/prefs_top_margin_title"
            android:summary="@string/prefs_top_margin_summary"
            />
        <SwitchPreferenceCompat
            android:key="JUSTIFY"
            android:title="@string/prefs_justify_title"
            android:summary="@string/prefs_justify_summary"
            />
        <SwitchPreferenceCompat
            android:key="HYPHENATION"
            android:title="@string/prefs_hyphenation_title"
            android:summary="@string/prefs_hyphenation_summary"
            />
        <SwitchPreferenceCompat
            android:key="VERSEPERLINE"
            android:title="@string/prefs_verse_per_line_title"
            android:summary="@string/prefs_verse_per_line_summary"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_strongs_and_morphology_title"
        >
        <Preference
            android:key="STRONGS"
            android:title="@string/prefs_show_strongs_title"
            android:summary="@string/prefs_show_strongs_summary"
            />
        <SwitchPreferenceCompat
            android:key="MORPH"
            android:title="@string/prefs_show_morphology_title"
            android:summary="@string/prefs_show_morphology_summary"
            />
        <SwitchPreferenceCompat
            android:key="NON_STRONGS_WORD_ITALIC"
            android:title="@string/prefs_non_strongs_word_italic_title"
            android:summary="@string/prefs_non_strongs_word_italic_summary"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_footnotes_and_xrefs_title"
        >
        <SwitchPreferenceCompat
            android:key="FOOTNOTES"
            android:title="@string/prefs_show_footnotes_title"
            android:summary="@string/prefs_show_footnotes_summary"
            />
        <SwitchPreferenceCompat
            android:key="FOOTNOTES_INLINE"
            android:title="@string/prefs_show_footnotes_inline_title"
            android:summary="@string/prefs_show_footnotes_inline_summary"
            />
        <SwitchPreferenceCompat
            android:key="XREFS"
            android:title="@string/prefs_show_xrefs_title"
            android:summary="@string/prefs_show_xrefs_summary"
            />
        <SwitchPreferenceCompat
            android:key="EXPAND_XREFS"
            android:title="@string/prefs_expand_footnotes_title"
            android:summary="@string/prefs_expand_footnotes_summary"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_verses_and_headings_title"
        >
        <SwitchPreferenceCompat
            android:key="VERSENUMBERS"
            android:title="@string/prefs_show_verseno_title"
            android:summary="@string/prefs_show_verseno_summary"
            />
        <SwitchPreferenceCompat
            android:key="SECTIONTITLES"
            android:title="@string/prefs_section_title_title"
            android:summary="@string/prefs_section_title_summary"
            />
        <SwitchPreferenceCompat
            android:key="TITLE_SCROLL_BUTTON"
            android:title="@string/prefs_title_scroll_button_title"
            android:summary="@string/prefs_title_scroll_button_summary"
            />
        <SwitchPreferenceCompat
            android:key="PAGENUMBER"
            android:title="@string/page_number_title"
            android:summary="@string/page_number_summary"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_page_scrolling_title"
        >
        <SwitchPreferenceCompat
            android:key="INFINITE_SCROLL"
            android:title="@string/prefs_infinite_scroll_title"
            android:summary="@string/prefs_infinite_scroll_summary"
            />
        <Preference
            android:key="PAGE_SCROLL_AMOUNT"
            android:title="@string/prefs_page_scroll_amount_title"
            android:summary="@string/prefs_page_scroll_amount_summary"
            />
        <SwitchPreferenceCompat
            android:key="SCROLL_HELPER_LINES"
            android:title="@string/prefs_scroll_helper_lines_title"
            android:summary="@string/prefs_scroll_helper_lines_summary"
            />
        <Preference
            android:key="SCROLL_HELPER_LINE_STYLE"
            android:title="@string/prefs_scroll_helper_line_style_title"
            android:summary="@string/prefs_scroll_helper_line_style_summary"
            />
        <SwitchPreferenceCompat
            android:key="PAGE_BUTTONS"
            android:title="@string/prefs_page_buttons_title"
            android:summary="@string/prefs_page_buttons_summary"
            />
        <SwitchPreferenceCompat
            android:key="ORDINALS"
            android:title="@string/prefs_show_ordinals_title"
            android:summary="@string/prefs_show_ordinals_summary"
            />
        <SwitchPreferenceCompat
            android:key="SHOW_READING_PROGRESS"
            android:title="@string/prefs_show_reading_progress_title"
            android:summary="@string/prefs_show_reading_progress_summary"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_text_bookmarks_title"
        >
        <SwitchPreferenceCompat
            android:key="BOOKMARKS_SHOW"
            android:title="@string/prefs_show_bookmarks_title"
            android:summary="@string/prefs_show_bookmarks_summary"
            />
        <SwitchPreferenceCompat
            android:key="MYNOTES"
            android:title="@string/prefs_show_mynotes_title"
            android:summary="@string/prefs_show_mynotes_summary"
            />
        <SwitchPreferenceCompat
            android:key="AI_DOC_MARKERS"
            android:title="@string/prefs_show_ai_doc_markers_title"
            android:summary="@string/prefs_show_ai_doc_markers_summary"
            />
        <Preference
            android:key="BOOKMARKS_HIDELABELS"
            android:title="@string/bookmark_settings_hide_labels_title"
            android:summary="@string/bookmark_settings_hide_labels_summary"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/prefs_reading_and_memorization_title"
        >
        <SwitchPreferenceCompat
            android:key="MARK_AS_READ_BUTTON"
            android:title="@string/prefs_mark_as_read_button_title"
            android:summary="@string/prefs_mark_as_read_button_summary"
            />
        <SwitchPreferenceCompat
            android:key="MEMORIZATION_INDICATORS"
            android:title="@string/prefs_show_memorization_indicators_title"
            android:summary="@string/prefs_show_memorization_indicators_summary"
            />
        <SwitchPreferenceCompat
            android:key="AUTO_TRACK_READING"
            android:title="@string/prefs_auto_track_reading_title"
            android:summary="@string/prefs_auto_track_reading_summary"
            />
    </PreferenceCategory>
</PreferenceScreen>
