<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreferenceCompat
        android:key="auto_mark_memorized"
        android:title="@string/memorize_auto_mark"
        android:summary="@string/memorize_auto_mark_summary"
        android:defaultValue="true"
        android:icon="@drawable/ic_baseline_check_circle_24" />
    <SwitchPreferenceCompat
        android:key="memorize_type_full_words"
        android:title="@string/memorize_type_full_words"
        android:summary="@string/memorize_type_full_words_summary"
        android:defaultValue="false"
        android:icon="@drawable/ic_baseline_keyboard_24" />
    <ListPreference
        android:key="memorize_word_visibility"
        android:title="@string/memorize_word_visibility"
        android:summary="@string/memorize_word_visibility_summary"
        android:entries="@array/memorize_word_visibility_entries"
        android:entryValues="@array/memorize_word_visibility_values"
        android:defaultValue="light"
        android:icon="@drawable/ic_baseline_visibility_24" />
    <SwitchPreferenceCompat
        android:key="memorize_error_heatmap"
        android:title="@string/memorize_error_heatmap"
        android:summary="@string/memorize_error_heatmap_summary"
        android:defaultValue="true"
        android:icon="@drawable/ic_baseline_error_24" />
    <SwitchPreferenceCompat
        android:key="memorize_scramble_hide_used"
        android:title="@string/memorize_scramble_hide_used"
        android:summary="@string/memorize_scramble_hide_used_summary"
        android:defaultValue="false"
        android:icon="@drawable/ic_baseline_visibility_off_24" />
    <SwitchPreferenceCompat
        android:key="memorize_include_reference"
        android:title="@string/memorize_include_reference"
        android:summary="@string/memorize_include_reference_summary"
        android:defaultValue="true"
        android:icon="@drawable/ic_baseline_menu_book_gray_24" />
</PreferenceScreen>
